# opencoder

./: .gitignore  Cargo.toml  README.md
src/: config.rs  handlers.rs  main.rs  models.rs  services.rs
src/gitea/: handlers.rs
static/: index.html
