[package]
name = "qwen-coder-web"
version = "0.1.0"
edition = "2021"
description = "A web application inspired by qwen-coder with task decomposition, multi-prompt support, Gitea integration, and OpenAI-compatible API"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for generating unique IDs
uuid = { version = "1", features = ["v4"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Template engine (optional, for server-side rendering if needed)
askama = { version = "0.12", optional = true }

# Markdown support
pulldown-cmark = "0.9"

# Regex for pattern matching
regex = "1"

[features]
default = []
templates = ["askama"]

[[bin]]
name = "qwen-coder-web"
path = "src/main.rs"
